<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_subtitle"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTaskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_label"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/task_title_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/tvTaskTitleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etTaskTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvPriorityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvDueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerPriority"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvDueDateLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_due_date"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/btnSelectDate"
        app:layout_constraintBottom_toBottomOf="@id/btnSelectDate"
        app:layout_constraintStart_toEndOf="@id/btnSelectDate"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_task_button"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnSelectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/btnSaveTask"
        app:layout_constraintStart_toEndOf="@id/btnSaveTask"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
